fix tray item overlap label error

--- a/src/main/webapp/app/views/GGeditor/flow-diagram-editor/css/_Layout.scss
+++ b/src/main/webapp/app/views/GGeditor/flow-diagram-editor/css/_Layout.scss
@@ -89,8 +89,8 @@ body,
 
 .tray-item {
   cursor: pointer;
-  width: 64px;
-  height: 64px;
+  //width: 64px;
+  //height: 64px;
   background-color: transparent;
 }
 //
